@@ -9,6 +9,8 @@ cdebconf (0.78) UNRELEASED; urgency=low
       menu and "jumping" between menu items. Lots of other changes.
   * Colin Watson
     - Add iterate methods to the stack database module.
+    - Throw "100 internal error" if a frontend's go() method returns
+      DC_NOTOK.
 
  -- Colin Watson <cjwatson@debian.org>  Mon,  9 May 2005 19:23:45 +0100
 
